<resources>
    <string name="app_name">Bungsegwon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname_setting_text">닉네임을 설정해주세요.</string>
    <string name="nickname_setting_hint">멋진 이름을 지어주세요.</string>
    <string name="main_bottom_search_text">검색</string>
    <string name="main_bottom_enroll_text">등록</string>
    <string name="main_bottom_my_text">마이</string>
    <string name="please_enroll_text">등록해주세요.</string>
    <string name="near_market_notification_text">주변에 아는 가게가 있다면\n사람들에게 알려주세요.</string>
    <string name="go_enroll_text">등록 하러 가기</string>
    <string name="hello_text">안녕하세요</string>
    <string name="my_favorite_market_text">내가 찜한 가게</string>
    <string name="login_e_text">로그인이</string>
    <string name="need_text">필요해요</string>
    <string name="my_enroll_market_text">내가 등록한 가게</string>
    <string name="my_comment_text">내가 쓴 댓글</string>
    <string name="market_name_input_hint">가게 이름을 입력해주세요.</string>
    <string name="more_description_hint">추가로 설명하기</string>
    <string name="detail_description_text">상세 설명</string>
    <string name="taste_quantity_price_text">맛/수량/가격</string>
    <string name="menu_text">메뉴</string>
    <string name="market_name_text">가게 이름</string>
    <string name="location_text">위치</string>
    <string name="location_search_hint">위치를 검색해주세요.</string>
    <string name="deatail_location_description_hint">상세 위치 설명을 해주세요.</string>
    <string name="enroll_text">등록하기</string>
    <string name="address_text">주소</string>
    <string name="comment_text">댓글</string>
    <string name="comment_input_hint">댓글을 입력해주세요</string>
    <string name="finish_msg">한번 더 누르시면 종료됩니다.</string>
    <string name="now_other_people_search_enrolled_markets_text">이제 다른 사람들이 회원님이\n등록하신 가게를 검색할 수 있어요.</string>
    <string name="enroll_complete_text">등록완료!</string>
    <string name="text_privacy_policy_text">개인정보처리방침</string>
    <string name="email_question_text">이메일 문의하기</string>
    <string name="open_source_license_text">Open Source License</string>
    <string name="current_version_text">현재 버전</string>
    <string name="text_move_map_set_location">지도를 움직여 위치를 설정하세요</string>
    <string name="confirm_text">확인</string>
    <string name="location_permission_should_need_msg">위치권한을 허용해주셔야 원활한 사용이 가능합니다.</string>
    <string name="location_permission_denied_msg">위치권한 요청이 거부되었습니다.</string>
    <string name="location_permission_allowed_msg">위치권한 요청이 허용되었습니다.</string>
</resources>