<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.mtjin.bungsegwon.views.enroll_detail.EnrollDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f4f4f4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.enroll_detail.EnrollDetailFragment">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_right_close" />

            <TextView
                android:id="@+id/text_market_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:text="@string/market_name_text"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_market_name"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rect_round_white_radius_8_e5e5e5_padding_17"
                android:hint="@string/market_name_input_hint"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_c4c4c4"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_market_name"
                app:layout_constraintTop_toBottomOf="@id/text_market_name" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="2dp"
                android:text="@string/location_text"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_necessary_red"
                app:layout_constraintStart_toStartOf="@id/text_market_name"
                app:layout_constraintTop_toBottomOf="@id/et_market_name" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rect_round_white_radius_8_e5e5e5_padding_17"
                android:enabled="false"
                android:hint="@string/location_search_hint"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_c4c4c4"
                android:textSize="14dp"
                app:layout_constraintEnd_toStartOf="@id/iv_location_search"
                app:layout_constraintStart_toStartOf="@id/text_location"
                app:layout_constraintTop_toBottomOf="@id/text_location" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_location_search"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:background="@drawable/rect_round_white_radius_8_e5e5e5_padding_14"
                app:layout_constraintBottom_toBottomOf="@id/et_location"
                app:layout_constraintEnd_toEndOf="@id/et_market_name"
                app:layout_constraintTop_toTopOf="@id/et_location"
                app:srcCompat="@drawable/ic_search_on" />

            <EditText
                android:id="@+id/et_location_detail"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rect_round_white_radius_8_e5e5e5_padding_17"
                android:hint="@string/deatail_location_description_hint"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_c4c4c4"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="@id/et_market_name"
                app:layout_constraintStart_toStartOf="@id/text_location"
                app:layout_constraintTop_toBottomOf="@id/et_location" />

            <TextView
                android:id="@+id/text_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="2dp"
                android:text="@string/menu_text"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_necessary_red"
                app:layout_constraintStart_toStartOf="@id/text_market_name"
                app:layout_constraintTop_toBottomOf="@id/et_location_detail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="여러 항목을 선택할 수 있어요."
                android:textColor="@color/gray_636363"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="@id/text_menu"
                app:layout_constraintStart_toEndOf="@id/text_menu"
                app:layout_constraintTop_toTopOf="@id/text_menu" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/text_menu"
                app:spanCount="4"
                bind:setEmployItems="@{vm.menuList}" />

            <TextView
                android:id="@+id/text_foods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="2dp"
                android:text="@string/taste_quantity_price_text"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_necessary_red"
                app:layout_constraintStart_toStartOf="@id/text_market_name"
                app:layout_constraintTop_toBottomOf="@id/rv_menus" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_selected_food"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/et_market_name"
                app:layout_constraintStart_toStartOf="@id/et_market_name"
                app:layout_constraintTop_toBottomOf="@id/text_foods">

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/detail_description_text"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/text_market_name"
                app:layout_constraintTop_toBottomOf="@id/layout_selected_food" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="0dp"
                android:layout_height="73dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rect_round_white_radius_8_e5e5e5_padding_17"
                android:hint="@string/more_description_hint"
                android:maxLines="10"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_c4c4c4"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="@id/et_market_name"
                app:layout_constraintStart_toStartOf="@id/text_location"
                app:layout_constraintTop_toBottomOf="@id/text_description" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_enroll"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="23.74dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="112dp"
                android:background="@drawable/rect_round_ffd464_radius_8"
                android:text="@string/enroll_text"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>