<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_e5e5e5"
        tools:context=".views.setting.SettingFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_left_back" />

        <TextView
            android:id="@+id/text_privacy_policy"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:background="@color/white"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/text_privacy_policy_text"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:drawableEndCompat="@drawable/ic_right_arrow_25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:ignore="RtlSymmetry" />

        <View
            android:id="@+id/view_divider_1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_e5e5e5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_privacy_policy" />

        <TextView
            android:id="@+id/text_email_question_text"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:background="@color/white"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/email_question_text"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:drawableEndCompat="@drawable/ic_right_arrow_25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider_1"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_opensource_license"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/open_source_license_text"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:drawableEndCompat="@drawable/ic_right_arrow_25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_email_question_text"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_current_version"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/current_version_text"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:drawableEndCompat="@drawable/ic_right_arrow_25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_opensource_license"
            tools:ignore="RtlSymmetry" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>